--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
 </head>
 
 <body>
+  <!--This is the title area used with a simple bootstrap option and custom CSS styling-->
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
-    <p class="lead">Favorite Calendar app for Scheduling Day</p>
+    <p class="lead">Personal Calendar</p>
     <p id="currentDay" class="lead"></p>
     
   </header>
 <div class="container">
 
-    <!-- Timeblocks go here -->
+    <!-- Each time block is represented here from 0900 to 1700hrs.  Grid with rows maximize mobile ready app -->
     <div class="row">
       <div class="col-md-1 col-sm-2 hour pt-4">9:00AM</div>
       <input id="9Row" class="user-event-input col-md-10 col-sm-8 event-input-block">
